comments addressed